<resources>
    <string name="app_name">DSA</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email address</string>
    <string name="passwd">Password</string>
    <string name="confirm_passwd">Confirm Password</string>
    <string name="sign_up_message">Don\'t have an account? Sign up here!</string>
    <string name="name">Name</string>
    <string name="emptyTextInputEditText">Please fill the field</string>
    <string name="agreeToTOS">I <b>agree</b> that the app will use the data to only create the account and <b>nothing more</b></string>
    <string name="alreadyHaveAccount">If you already have an account click here!</string>
    <string name="passwordNotEqual">Passwords not matching</string>
    <string name="notifications">Notifications</string>
    <string name="patientFiles">Examinations</string>
    <string name="profile">Profile</string>
    <string name="passwdRegExError"> * min 8 characters \n* 1 lower case \n* 1 upper case \n* 1 digit \n* 1 special character</string>
    <string name="emailRegExError">Your email is invalid</string>
    <string name="appNotSupporting">This app doesn\'t support changing password. \nFor deleting this account click here!</string>
    <string name="buttonUpdate">Update</string>
    <string name="valueHasNotChanged">Value has not changed</string>
    <string name="addFiles">Add files</string>
    <string name="nameRegExError">No spaces is allowed if you want to add a space use this "_"</string>
    <string name="jsonErrorDuring">Error during</string>
    <string name="errorOnRegister">Email already exists</string>
    <string name="errorOnLogin">Incorrect email or password</string>
    <string name="errorOnUpdate">Email account already exists</string>
    <string name="successOnUpdate">The account has been updated</string>
    <string name="errorOnDelete">There was an unexpected error</string>
    <string name="successOnDelete">The account has been deleted</string>
    <string name="volleyError">Error during connection</string>
    <string name="uploadFile">Upload your picture</string>
    <string name="personalFiles">My uploaded files</string>
    <string name="fileUploadTitle">Title</string>
    <string name="fileUploadDescription">Description</string>
    <string name="fileUploadTextView">Image to be uploaded</string>
    <string name="fileUploadChooseImage">Choose Image</string>
    <string name="fileUploadSend">Send</string>
    <string name="textRegExError">The only stuff that allowed is 1–9 Aa–Zz</string>
    <string name="profileLogOut">Log out</string>
    <string name="profileLogOutToast">You have been disconnected</string>
    <string name="profileNoChanges">No changes found!</string>
    <string name="regExTooManyCharacters">Too many characters</string>
    <string name="errorOnFileUpload">Something happened during uploading the file</string>
    <string name="fileUploadedSuccessfully">File uploaded successfully!</string>
    <string name="noPermission">Permission required</string>
    <string name="filesRefreshList">Refresh</string>
    <string name="profileBugList">If you found a bug please click here</string>
    <string name="adapterNotificationAccess">Grant access to: </string>
    <string name="adapterNotificationButton">Yes</string>
    <string name="errorOnFetchingFiles">No files to fetch</string>
    <string name="errorOnDownloadingImage">Error during downloading</string>
    <string name="errorOnUserNotExisting">User doesn\'t exist</string>
    <string name="dialogDelete">Delete</string>
    <string name="dialogBack">Back</string>
    <string name="dialogDownload">Download</string>
    <string name="dialogBugDesc">Bug Description</string>
    <string name="dialogBugConfirm">Confirm</string>
    <string name="errorOnFileDelete">Error while deleting file</string>
    <string name="successFileDeletion">Exam deleted successfully</string>
    <string name="successImageSave">Image saved successfully</string>
    <string name="successFilingBugReport">Bug report sent successfully</string>
    <string name="onErrorFilingBugReport">Failed to sent bug report</string>
    <string name="personalNotifications">Notifications</string>

    <!-- Navigation Bar -->
    <string name="notification">Notification</string>
    <string name="placeHolder">" "</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="fabContentDescription">Add file</string>

    <!-- Sign in -->
    <string name="signInWithGithub">Continue with Github</string>
    <string name="signInWithEmailHelper">Sign in with your email</string>
    <string name="signUpEmail">Email</string>
    <string name="signUpPassword">Password</string>
    <string name="signInWithEmail">Sign In</string>
    <string name="iDoNotHaveAnAccount">If you don\'t have an account click here!</string>

    <!-- Sign Up -->
    <string name="signUpName">Name</string>
    <string name="signUpWithEmailHelper">Sign up with your email</string>
    <string name="signUpWithEmail">Sign up</string>
    <string name="signUpCheckBox"> <b> I agree that am 18+ years old </b> and the app will use my data to create my account and nothing more</string>

    <!-- GitHub Sign In -->
    <string name="gitLoginUserExist">User exists</string>
    <string name="gitLoginError">Encounter an error: </string>
    <string name="gitLoginSuccess">User logged in </string>

    <!-- Email Sign In -->
    <string name="loginUserError">Encounter an error: </string>
    <string name="loginUserSuccess">User logged in </string>

    <!-- Email Sign Up -->
    <string name="createUserSuccess">Registration completed</string>
    <string name="createUserError">Registration error: </string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawerSignOut">Sign out</string>
    <string name="drawerSettings">Settings</string>

    <string-array name="url">
        <item>http://192.168.1.10/DSA/UsersRegister.php</item>
        <item>http://192.168.1.10/DSA/UserLogin.php</item>
        <item>http://192.168.1.10/DSA/UserUpdate.php</item>
        <item>http://192.168.1.10/DSA/UserDelete.php</item>
        <item>http://192.168.1.10/DSA/FileUpload.php</item>
        <item>http://192.168.1.10/DSA/UserExist.php</item>
        <item>http://192.168.1.10/DSA/FileFetch.php</item>
        <item>http://192.168.1.10/DSA/FileImageFetch.php</item>
        <item>http://192.168.1.10/DSA/FileDelete.php</item>
        <item>http://192.168.1.10/DSA/BugReport.php</item>
    </string-array>

    <string name="sampleDate" translatable="false">2022-01-06 19:27:32</string>
    <string name="sampleFileTitle" translatable="false">Lorem ipsum dolor sit amet Lorem ipsum </string>
    <string name="sampleFileDesc" translatable="false">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor </string>
    <string name="sampleNotificationDocName" translatable="false">Dr. Meowingtons </string>

</resources>