<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottomNavHome"
        android:title="@string/home"
        android:icon="@drawable/ic_outline_home_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottomNavSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_outline_search_24"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/placeHolder"
        android:enabled="false"/>

    <item
        android:id="@+id/bottomNavNotification"
        android:title="@string/notification"
        android:icon="@drawable/ic_outline_notifications_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottomNavMessage"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_message_24"
        app:showAsAction="ifRoom"/>
</menu>