<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemNotifications"
        android:icon="@drawable/ic_outline_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="always"/>

    <item
        android:id="@+id/itemFiles"
        android:icon="@drawable/ic_outline_folder_24"
        android:title="@string/patientFiles"
        app:showAsAction="always"/>

    <item
        android:id="@+id/itemUpload"
        android:icon="@drawable/ic_outline_add_24"
        android:title="@string/addFiles"
        app:showAsAction="always"/>

    <item
        android:id="@+id/itemProfile"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>