<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.fragment.SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInWithGithub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInWithGithub"
                app:icon="@drawable/github_mark"
                app:iconSize="24dp"
                android:backgroundTint="@color/black"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/signInFacebookHelper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInWithGithub"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/signInWithGithub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/signInHelperDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                app:dividerThickness="2dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/signInFacebookHelper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/signInContinueWithEmailHelper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInWithEmailHelper"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/signInHelperDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInUserEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/signInContinueWithEmailHelper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/signUpEmail"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress|textAutoComplete" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInUserPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/signInUserEmailError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/signUpPassword"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signInUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInWithEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signInWithEmail"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/signInUserPasswordError"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/signInGotoSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/iDoNotHaveAnAccount"
                android:textColor="@drawable/custom_text_view_on_press"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/signInWithEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/signUpDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                app:dividerThickness="1dp"
                app:dividerColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/signInGotoSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
